[project]
name = "ralph-orchestrator"
version = "0.1.0"
description = "Simple yet powerful AI agent orchestration using the Ralph Wiggum technique"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.0.0",
]

[project.scripts]
ralph = "ralph_orchestrator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
