[project]
name = "ralph-orchestrator"
version = "0.1.0"
description = "Simple yet powerful AI agent orchestration using the Ralph Wiggum technique"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-code-sdk>=0.0.21",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocs-material-extensions>=1.3.1",
    "psutil>=7.0.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.2",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
ralph = "ralph_orchestrator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
